feat: implementing additional tasks
