# docs/swagger.json
@@ -16,6 +16,43 @@
     },
     "host": "localhost:8080",
     "paths": {
+        "/operations": {
+            "post": {
+                "description": "Get operations by year by month",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "operations"
+                ],
+                "summary": "Get operations by year by month",
+                "parameters": [
+                    {
+                        "description": "time",
+                        "name": "time",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.OperationInputData"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/segments": {
             "post": {
                 "description": "Create new segment",
@@ -77,7 +114,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.SegmentInputData"
+                            "$ref": "#/definitions/handler.SegmentDeleteData"
                         }
                     }
                 ],
@@ -98,6 +135,39 @@
             }
         },
         "/users": {
+            "get": {
+                "description": "Get user active segments",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Get user active segments",
+                "operationId": "Get user active segments by id",
+                "parameters": [
+                    {
+                        "description": "user id",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.UserGetSegmentsInputData"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                }
+            },
             "post": {
                 "description": "Create new user segments",
                 "consumes": [
@@ -113,7 +183,7 @@
                 "parameters": [
                     {
                         "description": "segments info",
-                        "name": "segment",
+                        "name": "segments",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -128,6 +198,9 @@
                     "400": {
                         "description": "Bad Request"
                     },
+                    "404": {
+                        "description": "Not Found"
+                    },
                     "409": {
                         "description": "Conflict"
                     }
@@ -136,6 +209,41 @@
         }
     },
     "definitions": {
+        "handler.OperationInputData": {
+            "type": "object",
+            "required": [
+                "limit"
+            ],
+            "properties": {
+                "limit": {
+                    "type": "integer",
+                    "maximum": 10,
+                    "minimum": 1
+                },
+                "month": {
+                    "type": "integer"
+                },
+                "offset": {
+                    "type": "integer"
+                },
+                "year": {
+                    "type": "integer"
+                }
+            }
+        },
+        "handler.SegmentDeleteData": {
+            "type": "object",
+            "required": [
+                "slug"
+            ],
+            "properties": {
+                "slug": {
+                    "type": "string",
+                    "maxLength": 255,
+                    "minLength": 1
+                }
+            }
+        },
         "handler.SegmentInfo": {
             "type": "object",
             "required": [
@@ -158,10 +266,34 @@
                 "slug"
             ],
             "properties": {
+                "percent": {
+                    "type": "integer",
+                    "maximum": 100,
+                    "minimum": 1
+                },
                 "slug": {
                     "type": "string",
                     "maxLength": 255,
                     "minLength": 1
+                }
+            }
+        },
+        "handler.UserGetSegmentsInputData": {
+            "type": "object",
+            "required": [
+                "limit"
+            ],
+            "properties": {
+                "limit": {
+                    "type": "integer",
+                    "maximum": 10,
+                    "minimum": 1
+                },
+                "offset": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
                 }
             }
         },
@@ -195,6 +327,9 @@
             "type": "object",
             "properties": {
                 "id": {
+                    "type": "integer"
+                },
+                "percent": {
                     "type": "integer"
                 },
                 "slug": {
