# model/segment.go
@@ -1,6 +1,7 @@
 package model
 
 type Segment struct {
-	Id   int    `json:"id"`
-	Slug string `json:"slug"`
+	Id      int    `json:"id"`
+	Slug    string `json:"slug"`
+	Percent int    `json:"percent"`
 }
